<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/bottom_view_pictures"
            android:icon="@drawable/ic_system"
            android:title="@string/btn_bottom_view_one" />
        <item
            android:id="@+id/bottom_view_earth"
            android:icon="@drawable/ic_earth"
            android:title="@string/btn_bottom_view_two" />
        <item
            android:id="@+id/bottom_view_animation_image"
            android:icon="@drawable/ic_mars"
            android:title="@string/btn_bottom_view_three" />
        <item
            android:id="@+id/bottom_view_constraint"
            android:icon="@drawable/ic_settings_menu"
            android:title="@string/btn_bottom_view_four" />
        <item
            android:id="@+id/bottom_view_animation"
            android:icon="@drawable/ic_settings_menu"
            android:title="@string/btn_bottom_view_five" />
    </group>
</menu>
